# consul-rust

./: .gitignore  .reviewdog.yml  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  rustfmt.toml  upload-docs.sh
.github/workflows/: check.yml  publish.yml  rust.yml  tests.yml
data/: consul-test.json  register.sh
examples/: service_discovery.rs
src/: agent.rs  catalog.rs  client.rs  common.rs  connect_ca.rs  error.rs  errors.rs  health.rs  keystore.rs  kv.rs  lib.rs  request.rs  response.rs  session.rs  status.rs  structs.rs
src/agent/: mod.rs  service.rs
src/connect/: ca.rs  intentions.rs  mod.rs
src/payload/: catalog.rs  mod.rs
src/test/: basic.rs  http.rs  mod.rs
tests/: catalog.rs  example.rs  health.rs  kv.rs  session.rs  status.rs
