[package]

name = "consul_oxide"
version = "0.5.0"
edition = "2021"
authors = ["Andrew Useckas <andrew.useckas@threat-x.com>", "Stu Small <stuart.small@threat-x.com>", "YoungKing <yanckin@gmail.com>", "Pierre Souchay <https://github.com/pierresouchay>", "Tomer Shalev <https://github.com/tomers>", "Kaylen Dart <https://github.com/kaylendog>"]
description = "Rust client libray for Consul HTTP API"
documentation = "https://docs.rs/consul/"
repository = "https://github.com/kaylendog/consul-oxide"
license = "MIT/Apache-2.0"

readme = "README.md"
keywords = ["consul", "discovery"]

[dependencies]
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json"] }
serde = "1"
serde_derive = "1"
serde_json = "1.0"
thiserror = "1"
url = "2.1"

[dev-dependencies]
base64 = "0.13"
hostname = "0.3"
rand = "0.8.3"
tokio = { version = "1", features = ["full"]}
